# omscs7210_dslabs_vm

./: .gitignore  README.md  application.py  main.py  pyproject.toml  setup.cfg  setup.ps1  vbox.py
template/: distributed_systems_template.ova
