[tool.poetry]
name = "Distributed Systems GT Quickstarter"
version = "1.0.0"
description = "Used for quickly getting users setup on a virutal machine with all required tooling pre-installed."

license = "MIT"

authors = [
    "Daniel Gleason <danielpgleason@icloud.com>"
]

readme = ["README.md"]

[tool.poetry.dependencies]
# Compatible Python versions
python = ">=3.10,<3.11"
pyside2 = ">=5.15.2.1"
qtutils = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "*"
mypy = "*"
pylint = "*"
pycodestyle = "^2.10.0"

[tool.poetry.scripts]
my-script = "main"